(3) Adding of atlas map for major regions for l1* map. 
    Runs with default SPM segmentation.
------------------------------------------------------------------------
r469 | dahnke | 2013-04-15 16:51:02

M       cg_vbm_defaults.m
M       CHANGES.txt
M       vbm12.man

Changed regularization default to new default of SPM12 r5373.

------------------------------------------------------------------------
r470 | gaser | 2013-04-16 13:54:00

M       vbm_vol_iscale.m
M       cg_vbm_batch.m
 M      templates_1.50mm/l1A.nii
 M      templates_1.50mm/p0A.nii
M       cg_vbm_run.m
M       CHANGES.txt
M       vbm_io_niiwrite.m
M       cg_slice_overlay.m
M       cg_vbm_write.m

(1) Changed regularization default to new default of SPM12 r5373.
(2) Always use .nii as extension in vbm_io_niiwrite.m.
(3) Replaced fileparts by spm_fileparts.

------------------------------------------------------------------------
r471 | gaser | 2013-04-16 14:31:44

M       CHANGES.txt
M       cg_vbm_write.m
M       vbm_io_niiwrite.m
D       vbm_pre_partvol.m
A       vbm_vol_partvol.m

(1) Update partitioning for Dartel input and remove old normalization code.
(2) Update blood vessel correction in the partitioning routine.

------------------------------------------------------------------------
r472 | dahnke | 2013-04-16 14:44:12

M       CHANGES.txt
M       cg_vbm_defaults.m
M       cg_vbm_write.m
D       vbm_io_niiwrite.m
A  +    vbm_io_writenii.m
M       vbm_vol_partvol.m
M       vbm_vol_pbt.m
M       vbm_vol_resize.m

(1) Added interpolation and deinterpolation function in vbm_vol_resize for 
    thickness/surface estimation.
(2) Added blood vessel correction.
(3) Correct error in pcT.

------------------------------------------------------------------------
r473 | dahnke | 2013-04-17 18:12:27

M       CHANGES.txt
M       cg_vbm_write.m

(1) Add a missing variable.
------------------------------------------------------------------------
r474 | dahnke | 2013-04-17 18:21:01