@@ -1888,3 +1888,11 @@ M       cg_vbm_write.m
 (1) Add a missing variable.
 ------------------------------------------------------------------------
 r474 | dahnke | 2013-04-17 18:21:01
+
+M       Makefile.vbm
+M       CHANGES.txt
+M       cg_check_cov.m
+
+Some minor changes in cg_check_ocv.m.
+------------------------------------------------------------------------
+r475 | gaser | 2013-04-19 10:32:37
